--- a/gem5-arm/Dockerfile
+++ b/gem5-arm/Dockerfile
@@ -1,5 +1,6 @@
 FROM kierdavis/gem5-src:latest
 
-RUN scons --directory=/opt/gem5 build/ARM/gem5.opt -j$(nproc)
+RUN cd /opt/gem5 && \
+    scons build/ARM/gem5.opt -j$(nproc)
 
 ENTRYPOINT ["/opt/gem5/build/ARM/gem5.opt"]
